--- a/main.css
+++ b/main.css
@@ -1,4 +1,31 @@
 /* Google fonts  */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400&family=Lora&family=Montserrat:wght@200;300&family=Playfair+Display:wght@400;500&family=Poppins:wght@200&display=swap');
 
-root
+:root{
+    --color-primary: #7380ec;
+    --color-danger: #ff7782;
+    --color-success: #41f1b6;
+    --color-warning: #ffbb55;
+    --color-white: #fff;
+    --color-info-dark: #7d8da1;
+    --color-info-light: #dce1eb;
+    --color-dark: #363949;
+    --color-light: rgba(132, 139, 200, 0.18);
+    --color-primary-variant: #111e88;
+    --color-dark-variant: #677483;
+    --color-background: #f6f6f6;
+
+    --card-border-radius: 2rem;
+    --border-radius-1: 0.4rem;
+    --border-radius-2:  0.8rem;
+    --border-radius-3: 1.2rem;
+
+    --card-padding: 1.8rem;
+    --padding: 1.2rem;
+
+    --box-shadow: 0 2rem 3rem var(--color-light);
+
+    --playfair-display: 'Playfair Display';
+    --lato: 'Lato';
+    --montserrat: 'Montserrat';
+}
