--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ html{
 body{
     width: 100vw;
     height: 100vh;
-    font-family: var(--montserrat), sans-serif;
+    font-family: var(--poppins), sans-serif;
     font-size: 0.88rem;
     background: var(--color-background);
     user-select: none;
@@ -120,7 +120,7 @@ b{
 }
 
 .danger{
-    color: var(--color-danger);
+    color: var(--color-primary);
 }
 
 .success{
@@ -129,4 +129,83 @@ b{
 
 .warning{
     color: var(--color-warning);
+}
+
+/* Container */
+
+.container{
+    display: grid;
+    width: 96%;
+    margin: 0 auto;
+    gap: 1.8rem;
+    grid-template-columns: 14rem auto 23rem;
+}
+
+/* Aside */
+aside{
+    height: 100vh;
+}
+
+aside .top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 1.4rem;
+}
+
+aside .logo{
+    display: flex;
+    gap: 0.7rem;
+}
+
+aside .logo img{
+    width: 1.5rem;
+    height: 1.5rem;
+    cursor: pointer;
+}
+
+aside .close{
+    display: none;
+}
+
+/* Sidebar */
+
+aside .sidebar{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 3rem;
+    height: 86vh;
+    background: white ;
+}
+
+aside h3{
+    font-weight: 500;
+}
+
+aside .sidebar a{
+    display: flex;
+    color: var(--color-info-dark);
+    margin-left: 2rem;
+    gap: 1 rem;
+    align-items: center;
+    position: relative;
+    height: 3.7rem;
+    transition: all 300ms ease;
+}
+
+aside .sidebar a span{
+    font-size: 1.6rem;
+}
+
+aside .sidebar a:last-child{
+    position: absolute;
+    bottom: 2rem;
+    width: 100%;
+}
+
+aside .sidebar a .active{
+    background: var(--color-light);
+    color: var(--color-primary);
+    margin-left: 0;
 }
